# gallery

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  test.env
.github/workflows/: django_ci_cd.yml
commands/: start_server_dev.sh  start_server_prod.sh
nginx/: default.conf
src/: django  manage.py
src/account/: admin.py  auth_backend.py  forms.py  managers.py  models.py  pipeline.py  tasks.py  urls.py  views.py
src/account/migrations/: 0001_initial.py  0005_alter_userprofile_phone_number.py  0007_userprofile.py  0008_userprofile_avatar_userprofile_date_joined_and_more.py  0010_proxyuser_userprofile.py  0012_user_mfa_enabled_user_mfa_secret.py  0013_user_account_use_first_n_210602_idx.py  0014_delete_proxyuser.py  0015_proxyuser.py  0016_alter_user_mfa_secret.py  0017_remove_profile_email_remove_profile_first_name_and_more.py  0018_remove_profile_phone_number.py  0019_remove_user_avatar_remove_user_birth_date_and_more.py  0020_remove_user_account_use_first_n_210602_idx_and_more.py  0021_alter_profile_user.py
src/account/models/: __init__.py  profile.py  proxy_user.py  user.py
src/account/services/: signals.py  verify_2fa_otp.py
src/account/tests/: common_test.py  test_auth_user.py  test_mfa.py  test_registration_user.py
src/api/: permissions.py  urls.py  views.py
src/api/tests/: __init__.py  tests.py
src/common/: mixins.py
src/config/: celery_app.py  urls.py
src/config/settings/: base.py  dev.py  prod.py  stage.py
src/core/: admin.py  documents.py  models.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_contactus.py  0003_delete_books.py  0004_alter_contactus_created_at_alter_contactus_email_and_more.py
src/core/models/: __init__.py  contact_us.py
src/core/utils/: paginator.py  token_generator.py
src/fixtures/: basic.json  enterprise.json  images.json  premium.json  subscriptions.json  users.json  usersubscription.json
src/images/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
src/images/migrations/: 0003_alter_images_options_and_more.py  0004_alter_images_description.py  0005_alter_images_image.py  0006_images_price_images_quantity_images_total_quantity.py  0007_alter_images_price_alter_images_title.py  0008_alter_images_title.py  0009_alter_images_author_alter_images_created_at_and_more.py  0010_alter_images_price.py
src/images/models/: __init__.py  images.py
src/images/tests/: common_test.py  test_images.py
src/static/js/: contact_form_ajax.js  show_notification.js
src/subscriptions/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/subscriptions/models/: __init__.py  (+2 more)
(+51 files in other folders)
