[tool.poetry]
name = "test-assignment"
version = "0.1.0"
description = ""
authors = ["Dima Birilko <sauberr10@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.0"
pillow = "10.4.0"
ruff = "0.5.7"
flake8 = "7.1.1"
black = "24.8.0"
isort = "5.13.2"
django-extensions = "3.2.3"
django-phonenumber-field = "8.0.0"
pycountry = "24.6.1"
django-phonenumbers = "1.0.1"
django-jet-reboot = "1.3.7"
google-api-python-client = "1.4.1"
feedparser = "6.0.11"
djangorestframework = "3.15.2"
faker = "27.0.0"
django-crispy-forms = "2.3"
crispy-bootstrap5 = "2024.2"
django-inlinecss-redux = "0.4.0"
django-recaptcha = "4.0.0"
python-dotenv = "1.0.1"
django-elasticsearch-dsl = "8.0"
sentry-sdk = "2.13.0"
django-prometheus = "2.3.1"
gunicorn = "23.0.0"
drf-yasg = "1.21.7"
setuptools = "73.0.1"
requests = "2.32.3"
django-debug-toolbar = "4.4.6"
social-auth-app-django = "5.4.2"
pyotp = "2.9.0"
qrcode = "8.0"
celery = "5.4.0"
amqp = "5.3.1"
asgiref = "3.8.1"
beautifulsoup4 = "4.12.3"
billiard = "4.2.1"
certifi = "2024.7.4"
cffi = "1.17.1"
charset-normalizer = "3.3.2"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
colorama = "0.4.6"
cryptography = "43.0.1"
cssutils = "2.11.1"
defusedxml = "0.7.1"
django-cachalot = "2.7.0"
django-redis = "5.4.0"
djangorestframework-simplejwt = "5.3.1"
djoser = "2.3.1"
elastic-transport = "8.15.0"
elasticsearch = "8.15.0"
elasticsearch-dsl = "8.15.1"
flower = "2.0.1"
httplib2 = "0.22.0"
humanize = "4.11.0"
idna = "3.8"
inflection = "0.5.1"
kombu = "5.4.2"
mccabe = "0.7.0"
more-itertools = "10.4.0"
mypy-extensions = "1.0.0"
oauth2client = "4.1.3"
oauthlib = "3.2.2"
packaging = "24.1"
pathspec = "0.12.1"
phonenumbers = "8.13.43"
platformdirs = "4.2.2"
prometheus-client = "0.20.0"
prompt-toolkit = "3.0.48"
psycopg2-binary = "2.9.10"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pycodestyle = "2.12.1"
pycparser = "2.22"
pyflakes = "3.2.0"
pyjwt = "2.9.0"
pynliner = "0.8.0"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
python3-openid = "3.2.0"
pytz = "2024.1"
pyyaml = "6.0.2"
redis = "5.2.0"
requests-oauthlib = "2.0.0"
rsa = "4.9"
sgmllib3k = "1.0.0"
six = "1.16.0"
social-auth-core = "4.5.4"
soupsieve = "2.6"
sqlparse = "0.5.1"
tornado = "6.4.2"
typing-extensions = "4.12.2"
tzdata = "2024.1"
uritemplate = "4.1.1"
urllib3 = "2.2.2"
vine = "5.1.0"
wcwidth = "0.2.13"
django-cors-headers = "^4.7.0"
django-celery-beat = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
